Update on Overleaf.

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -34,6 +34,44 @@ UPS CNRS 3611 ISC-PIF
          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
+
+
+
+% authors bio
+% Juste Raimbault is a PhD student at Université Paris 7, UMR CNRS 8504 Géographie-cités and UMR-T 9403 IFSTTAR LVMT, under the supervision of Arnaud Banos and Florent Le Néchet. He holds an engineer degree from Ecole Polytechnique and Ecole des Ponts et Chaussées, and a Master in Complex Systems Science from Ecole Polytechnique. His research focuses on complexity approaches to the relations between networks and territories.
+
+% Dr. Clémentine Cottineau is a research associate at the Centre for Advanced Spatial Analysis of University College London. She studied geography and economics at University Paris 1 Panthéon-Sorbonne and holds a PhD in geography from this university. Her thesis aimed at modelling urbanisation in the post-Soviet space with modular agent-based models. Since 2014, she has been working at the Centre for Advanced Spatial Analysis on urban economics and parametric scaling in the context of European systems of cities, using tools from complexity science to investigate inequality in cities and economic disparities between cities.
+
+% Dr. Marion Le Texier is associate professor at University of Rouen Normandie. She holds a PhD in geography from both Paris Diderot University and Luxembourg University. Her thesis aimed at modelling the circulation of euro coins through European borders with statistical and agent-based models. Previous to joining Rouen Normandie University in 2016, she has been a Jean Monet fellow at the European University Institute in Florence and a post-doc at Luxembourg University. Her work deals with data and modelling issues in different thematic contexts: access to nature in cities, international online media coverage of earthquakes, to name but two.
+
+% Dr. Florent Le Néchet is associate professor at  Paris-Est Marne-la-Vallée University (UPEM). He holds a PhD in planning from Paris-Est University (UPE). His thesis aimed at modelling the relationships between urban form and mobility patterns at metropolitan level, comparing several European cities, especially in France and Germany. His work deals with charactering and measuring mobility in cities, in relation to the built environment, and involves statistical techniques as well as multi-agent modelling.
+
+
+% Dr. Romain Reuillon is a research fellow at UMR CNRS 8504 Géographie-cités and at the Complex System Institute Paris Ile-de-France. He holds a PhD in Computer Science from Université Clermont II. His work deals with intensive computation model exploration, focusing on new techniques and methods to extract knowledge from models of simulation. He is the creator of the OpenMole platform for model exploration.
+
+
+% Cover Letter
+
+% Dear editors,
+
+%My coauthors and I are pleased to submit an original research article entitled ``Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models'' for consideration for publication in Computer, Environment and Urban Systems.
+
+%This article deals with the central yet poorly explored issue of the sensitivity of geosimulation models to their spatial context (i.e. the spatial configuration of agents and their environment), and more precisely their spatial initial conditions. We think the subject in general and the novelty of the paper in particular will meet the interest of the readers of CEUS, a journal dealing with computerised models and urban systems.
+
+%Despite some preliminary results being presented as at ECTQG 2015, Bari, and at Geocomputation Conference 2017, Leeds, we confirm that neither the manuscript nor any parts of its content are currently under consideration or published in another journal. We did not have any previous interaction with CEUS regarding this manuscript. We have no conflicts of interest to disclose. We do not have any opposed reviewer.
+
+% Yours faithfully,
+% Juste Raimbault and co-authors.
+
+
+
+
+
+
+
+
+
+
 \justify
 My coauthors and I are pleased to submit an original research article entitled ``Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models'' for consideration for publication in Computer, Environment and Urban Systems.
 
