--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -15,50 +15,38 @@
 % moderncv themes
 \moderncvstyle{banking}                            % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
 \moderncvcolor{red}                                % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
-\renewcommand{\familydefault}{\rmdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
-%\nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
+\renewcommand{\familydefault}{\rmdefault} 
+%\nopagenumbers{} 
+\usepackage[utf8]{inputenc} 
+\usepackage[scale=0.9]{geometry}
 
 
-% character encoding
-\usepackage[utf8]{inputenc}                       % if you are not using xelatex ou lualatex, replace by the encoding you are using
-%\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
-
-% adjust the page margins
-%\usepackage[scale=0.9]{geometry}
-%\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
-%\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
-
+\def \draft {1}
 \usepackage{xparse}
-\DeclareDocumentCommand{\comment}{m o o o o}
-{%
-    \textcolor{red}{#1}
-    \IfValueT{#2}{\textcolor{blue}{#2}}
-    \IfValueT{#3}{\textcolor{ForestGreen}{#3}}
-    \IfValueT{#4}{\textcolor{red!50!blue}{#4}}
-    \IfValueT{#5}{\textcolor{Aquamarine}{#5}}
+\usepackage{ifthen}
+\DeclareDocumentCommand{\comment}{o m o o o o}
+{\ifthenelse{\draft=1}{
+  \IfValueT{#1}{
+      \textcolor{red}{\textbf{C (#1) : }#2}
+      \IfValueT{#3}{\textcolor{blue}{\textbf{A1 : }#3}}
+      \IfValueT{#4}{\textcolor{ForestGreen}{\textbf{A2 : }#4}}
+      \IfValueT{#5}{\textcolor{red!50!blue}{\textbf{A3 : }#5}}
+      \IfValueT{#6}{\textcolor{Aquamarine}{\textbf{A4 : }#6}}
+    }
+    \IfNoValueT{#1}{
+      \textcolor{red}{\textbf{C : }#2}
+      \IfValueT{#3}{\textcolor{blue}{\textbf{A1 : }#3}}
+      \IfValueT{#4}{\textcolor{ForestGreen}{\textbf{A2 : }#4}}
+      \IfValueT{#5}{\textcolor{red!50!blue}{\textbf{A3 : }#5}}
+      \IfValueT{#6}{\textcolor{Aquamarine}{\textbf{A4 : }#6}}
+    }
+ }{}
 }
-
-
-% to show numerical labels in the bibliography (default is to show no labels); only useful if you make citations in your resume
-%\makeatletter
-%\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
-%\makeatother
-%\renewcommand*{\bibliographyitemlabel}{[\arabic{enumiv}]}% CONSIDER REPLACING THE ABOVE BY THIS
-
-% bibliography with mutiple entries
-%\usepackage{multibib}
-%\newcites{book,misc}{{Books},{Others}}
-%----------------------------------------------------------------------------------
-%            content
-%----------------------------------------------------------------------------------
-%-----       letter       ---------------------------------------------------------
-
 
 
 \firstname{}
 \lastname{}
 \begin{document}
-
 
 % recipient data
 \recipient{Editor CEUS}{}
@@ -94,7 +82,8 @@ Thank you for the feedback on the draft paper ``Space Matters: extending sensiti
 First, the following general changes were done:
 
 \begin{itemize}
-	\item
+	\item Several comments, including the ones of the first and third referee, were linked to clarity and explicit description of models: we clarified the descriptions and better justified our choices, and also provided pseudo-codes in Appendix and made clearer that source code are openly available.
+    \item The feedback on the third referee that the most interesting was the phase diagram comparison was not directly compatible with other referees comments; we however added some developments and comments on this point to conciliate as most as possible these different comments.
 \end{itemize}
 
 \medskip
@@ -111,49 +100,54 @@ Concerning specifically the comments made by the first referee:
 
 \begin{itemize}
 	% 1. I think it would be better if the author would focus on a single model. This way they could describe the model and the analyses in more detail. As it stands, the models are treated as black boxes. 
-	\item This is indeed a qualified comment. However, after presenting our research to several audiences, we came to the conclusion that the genericity of our approach would be better served by two case studies than with a single model. We acknowledge the fact that this choice led us to shorten their presentations. Nevertheless, we have been taking heed to your remark to improve the description of the models by providing hyperlinks towards the NetLogo pages and Scala code lines (to be done). We believe this is sufficient as the models have not been adjusted from these textbook cases implementations.
+	\item The suggestion to focus on a single model is indeed a qualified comment. However, after presenting our research to several audiences, we came to the conclusion that the genericity of our approach would be better served by two case studies than with a single model. In that perspective, the ``black-box'' is seen as an advantage as it suggests this genericity. We acknowledge the fact that this choice led us to shorten their presentations. Nevertheless, we have been taking heed to your remark to improve the description of the models by adding pseudo-codes in Appendix and recalling more clearly the link to model source we used.
+    %We believe this is sufficient as the models have not been adjusted from these textbook cases implementations.
    
    % I believe it would be better to begin with an illustrative example on how two or three initial patterns influence the model results and then use the suggested method for a more extensive analysis
-   \item 
+   \item \comment[JR]{Possibility to find configuration with an ``eyeball'' difference ? i'm not sure of that..}
 	
 	% 2. It is very important to describe the models. This is especially relevant for the Schelling model, which has many variants; each has different dependencies on the initial pattern. In my opinion, the NetLogo implementation is not the best choice because the model does not reach a state of segregation when agents are highly intolerant.
-	\item \comment[MLT]{Thank you for this comment. The reason why we have decided to use the NetLogo implementations was again to help the readers to distance themselves from the case studies and focus on the genericity of the approach. This also explains why we have chosen Sugarscape as a second example: these two models are often used as toy models due to the simplicity of their mechanisms (in the NetLogo scenarios) and therefore do not require a high level of expertise nor technicality to apprehend the impacts of the initial spatial conditions on the model outputs. This is again an argument in favour of our choice: space-dependent variations are to be expected even with the most simple sociospatial models.}
+	%\comment[MLT]{Thank you for this comment. The reason why we have decided to use the NetLogo implementations was again to help the readers to distance themselves from the case studies and focus on the genericity of the approach. This also explains why we have chosen Sugarscape as a second example: these two models are often used as toy models due to the simplicity of their mechanisms (in the NetLogo scenarios) and therefore do not require a high level of expertise nor technicality to apprehend the impacts of the initial spatial conditions on the model outputs. This is again an argument in favour of our choice: space-dependent variations are to be expected even with the most simple sociospatial models.}
+    \item There was a misunderstanding for the Schelling implementation actually used, as we used our own implementation which pseudo-code has been added in Appendix of the paper and source code is openly available on the git repository of the project. This version implements the one used by (Gauvin et al., 2009), which also influenced us for the use of the term ``phase diagram''. It does not either reach a segregated state for high values of intolerance, but it does not cause a problem in our case as indicators can be computed on any model state (and actually reflect the fact that it is not segregated).
+    \item More generally concerning the choice of these two models, we aim at helping the readers to distance themselves from the case studies and focus on the genericity of the approach. This also explains why we have chosen Sugarscape as a second example: these two models are often used as toy models due to the simplicity of their mechanisms and therefore do not require a high level of expertise nor technicality to apprehend the impacts of the initial spatial conditions on the model outputs. This is again an argument in favour of our choice: space-dependent variations are to be expected even with the most simple sociospatial models.
 	
 	% 3. I am not sure why the Sugarscape model has been chosen given that the paper seems to be focused on cities.
-	\item See above. Besides, we clarified our choice by adding the following sentence to the model description: "In an urban environment, Sugarscape can be used to model how the spatial distribution of any type of goods or services can influence the spread of wealth among inhabitants."
+	\item Furthermore concerning the choice of the Sugarscape model, we think it is a good example of a stylized model of a spatialized socio-economic system, and according to (Batty, 2005) a good metaphor of an urban system. Our choice was accordingly clarified in the paper.
+%: "In an urban environment, Sugarscape can be used to model how the spatial distribution of any type of goods or services can influence the spread of wealth among inhabitants." % pas besoin de mettre les modifs ici
 	
 	% 4. Consider replacing “meta parameters” with something like “generator parameters” or “initial pattern parameters.”
-	\item Thank you for the suggestion. In order to clarify the concept, we now propose a short definition after the first use of the term (section Methods): "In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process".
+	%In order to clarify the concept of ``meta-parameter'' that we prefer to keep, we now propose a short definition after the first use of the term (section Methods): "In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process".
+    \item \comment[JR]{TB la def Marion ; là on peut choisir de virer en effet le terme, ou dire que les 3 sont interchangeable mais que "meta-" est plus pratique, qu'en pensez vous ?}
 	
 	% 5. Line 228: Please explain why the median was chosen. Especially given that you use an L2 norm and variances in the index
-	\item 
+	\item \comment[JR]{je pensais qu'on prenait la moyenne ? je verifie...}
 	
 	% 6. Line 232: comparing phase diagrams is related to the topic of comparing patterns. It would make sense to mention the methods that are usually used to compare patterns
-	\item 
+	\item \comment[JR]{biblio a rajouter}
 	
 	% 7. Line 238: Please explain why this particular index was chosen and discuss its properties. Connect the discussion to other indices like L1, and Linf norms, etc. Would we get qualitatively different results from different indices? 
-	\item 
+	\item \comment[JR]{on avait teste avec le Monge ca donnait a peut pres pareil ; donc les normes alpha surement encore plus. je regarde.}
 	
 	% 8. Regarding the spatial generator: the authors should explain why this generator is relevant to these two models? 
-	\item 
+	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit.
 	
 	% 9. The authors should illustrate the contribution of each parameter of the generator to the generated initial pattern using a figure. Details of the generators should be included in an appendix
-	\item 
+	\item The behavior of the spatial generator was described with more details in Appendix.
 	
 	% 10. Explain how the density grids are used in the Schelling model, do you allow more than one agent to be in the same cell? 
-	\item 
+	\item \comment[JR]{il a mal lu ou on est pas assez explicites, a detailler}
 	
 	% 11. Line 297: I am not sure why empirical density destitutions of cities are important in the context of this study. 
-	\item
+	\item 
 	
 	% 12. Line 641: NetLogo supports grids, continuous space, and GIS elements. It does not restrict the user in any way.
-	\item 
+	\item \comment[JR]{plutot d'accord avec lui mais parce que proficient en NetLogo, peut etre que des debutants sont plus contraints ? quelquun aurait une ref là dessus ?}
 	
 	% 13. Line 301: I am not sure what the authors mean by “interesting grids”
-	\item 
+	\item The term ``interesting grids'' was a typo and corrected, ``grids'' only was meant.
 	
 	% 14. Line 671: The same comment regarding “mythical ABMs” 
-	\item
+	\item The term ``mythical'' line 671 was a language mistake and corrected, ``well-known'' ABM was meant.
 \end{itemize}
 
 
@@ -167,16 +161,16 @@ Concerning the comments made by the second referee:
 
 \begin{itemize}
 	% In the abstract the authors claim that initial spatial conditions are often taken for granted. I do not agree to this statement. Initial spatial condition can have a large impact on the results of a model, however I do not think that the initial spatial conditions are often taken for granted.
-	\item 
+	\item \comment[JR]{il s'agirait de nuancer ici}
 	
 	% Page 2 line 88: the authors state that “Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents is still approximated by a constant density”, I do not think this is true. Many models generate a heterogeneous synthetic population that is based on local data (replicating the actual population as closely as possible) and in far more detail then what is done in this paper. I am thinking of work in the line of disease diffusion, crime etc.
-	\item 
+	\item \comment[JR]{il a un point car ce sont des classes de modeles qu'on a pas trop cité ? par contre la sensibilite a ces distribs precises n'est pas testée, ou pas systeématiquement : il faut qu'on clarifie ou reformule}
 	
 	% Page 2 line 98: “However, this step is rarely explicit and authors tend to generalize the conclusion of the model from a single, spatial case study”. I do not understand the first part of the this statement. The steps taken are often very explicit. Due to the amount of time it takes to correctly represent all spatial data, including population densities and the variation of other population variables over space, many authors indeed restrict themselves to a single case study due to the time intensity of this task. Many agent-based models are also not valid for other areas.
-	\item
+	\item \comment[JR]{idem la on parle pas exactement du meme type de modeles, mais son exemple prouve notre propos : le modele tourne sur une situation unique, et on teste pas l'effet de l'espace.}
 	
 	% The authors do not differentiate between data driven empirical models versus theory-driven models. I think a clear differentiation between the two groups and the positioning of the two case studies in the second group would make the paper more balanced.
-	\item 
+	\item \comment[JR]{oui du coup en disant ça ça repond à ses deux points précédents}
 	
 	% In section 1.3 (Previous considerations on the effects of the spatial configuration in simulation models) authors provide a lot of evidence on previous work on the impact of initial spatial conditions on the output of models. This is contrary to the statement in the abstract that initial conditions are often taken for granted.
 	\item 
@@ -186,13 +180,13 @@ Concerning the comments made by the second referee:
 	\item
 	
 	% Last paragraph of page 5, you do not state explicitly if genetic algorithms were use within the OpenMOLE platform.
-	\item The functionalities of OpenMOLE we used were detailed.
+	\item The functionalities of OpenMOLE we used were detailed; we did not use genetic algorithms but sampling methods and high performance computing environments.
 	
 	% In section 3.1, page 8, line 404-405 the authors mention that the distance of the phase diagrams was measured with respect to the reference phase diagram computed on the default initial spatial conditions. Actually this came as a surprise to me. I had the impression that all phase diagrams would be evaluated against all other diagrams. Perhaps this should be explained earlier in the paper.
 	\item 
 	
 	% Figure 4 and 5: I find it confusing that the green color indicates higher distance values and the red color indicates lower values. I think this should be reversed.
-	\item 
+	\item \comment[JR]{Clem tu es d'accord là dessus ?}
 	
 	% I appreciate the fact that the authors in section 4 clearly indicate the limitations of their work (and I share the limitations listed under “comparing phase diagrams”). Personally I do not think that releasing the density grids is an important opportunity. As mentioned before I think that the core of the work is in the comparison of the phase vectors. I am not so sure the second opportunity listed in 4.2 is very valid. I do not think that the CEUS journal targets social sciences exactly.
 	
@@ -222,10 +216,10 @@ Concerning the comments made by the third referee:
 	\item 
 
 	% You write “To our knowledge there exist no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature.” As this is new you may want to discuss how say its done in other fields?  
-	\item 
+	\item \comment[JR]{cf remarques other reviewers sur ce point}
 	
 	% In the Schelling and sugarscape models how are the initial population of agents distributed? Is it random? I ask as this is unclear in the current version of the paper but it is vital if your purpose is to explore how the initial spatial configuration impacts the results of the model. Should the agents not be all located at the same location for each run to rule out the impact of initial placement of agents on the resulting patterns? This is something that is not addressed in the paper. I know for example, the Schelling model in NetLogo normally places the agents at random locations but in your reimplementation how is this done? The same goes for the sugarscape model in NetLogo. I believe a clearer description of the model initialization would be good and how its not the initial random placement of agents but the actual environment that impacts the outcomes. Maybe this was explained in the paper but I missed it.  
-	\item 
+	\item \comment[JR]{on regarde des indicateurs aggreges qui ne dependent pas de la trajectoire de chaque agent, si le placement initial est random il na aucune influence sur ceux-ci (cf les distribs) -> ajouter des graphes de comportement stat des modeles en Appendix ?}
 	
 	% In Section 1.2 talk about “(monocentric vs. polycentric for example)” but in the results you don’t discuss the monocentric versions explicitly using these terms.
 	\item 
