--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,3 +1,16 @@
+
+@article{batty2005agents,
+  title={Agents, cells, and cities: new representational models for simulating multiscale urban dynamics},
+  author={Batty, Michael},
+  journal={Environment and Planning A},
+  volume={37},
+  number={8},
+  pages={1373--1394},
+  year={2005},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+
 @article{kruskal1983overview,
   title={An overview of sequence comparison: Time warps, string edits, and macromolecules},
   author={Kruskal, Joseph B},
