Update on Overleaf.

--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -141,14 +141,15 @@ Concerning specifically the comments made by the first referee:
 	
 	% 12. Line 641: NetLogo supports grids, continuous space, and GIS elements. It does not restrict the user in any way.
     % \comment[JR]{plutot d'accord avec lui mais parce que proficient en NetLogo, peut etre que des debutants sont plus contraints ? quelquun aurait une ref là dessus ?}
-	\item We agree that NetLogo does not restrict the use on what implementation to use. However, some features are much more easier as raster or the contrary, what could influence the choice of beginners. We clarified that statement in the paper.
+    %\comment[MLT]{En fait, c'est surtout le cas des pre-built simulations proposées dans la librairie de NetLogo. J'ai un peu cherché, je trouve pas de références qui montrent explicitement la surabondance des grilles dans les modèles hors librairie...}[(JR) ok yes en effet ! cela devrait suffire comme argument ?]
+	\item We agree that NetLogo does not restrict the use on what implementation to use. However, some features are much more easier as raster or the contrary, what could influence the choice of beginners. Furthermore, models in the built-in NetLogo model library mostly rely on rasters. We clarified that statement in the paper.
 	
 	% 13. Line 301: I am not sure what the authors mean by “interesting grids”
 	\item The term ``interesting grids'' was a typo and corrected, ``grids'' only was meant.
 	
 	% 14. Line 671: The same comment regarding “mythical ABMs” 
-	\item The term ``mythical'' line 671 was a language mistake and corrected, ``well-known'' ABM was meant.
-    \comment[MLT]{Use "textbook ABM instead?}
+	\item The term ``mythical'' line 671 was a language mistake and corrected, ``textbook'' ABM was meant.
+    \comment[MLT]{Use "textbook ABM instead?}[(JR) yes, better]
 \end{itemize}
 
 
@@ -208,7 +209,7 @@ Concerning the comments made by the third referee:
 	\item \comment[JR]{enlever le concept de validation}
 	
 	% Geosimulation is introduced but not defined or referenced.  This should be clarified as the term has several meanings etc.
-	\item 
+	\item For the definition of geosimulation, we meant the one coined by (Benenson and Torrens, 2004), this was made explicit and the reference was added. 
 	
 	% In places the English along with the overall argument could be better articulated. For example, on page 1 you write: “We think simulation can become a very good tool to achieve this,”  Could this be rewritten or better argued. You are not the only one to believe this but you don’t show this in your paper.
 	\item 
