--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,4 +1,17 @@
 
+
+@article{benenson2004geosimulation,
+  title={Geosimulation: object-based modeling of urban phenomena},
+  author={Benenson, Itzhak and Torrens, Paul M},
+  journal={Computers, Environment and Urban Systems},
+  volume={28},
+  number={1-2},
+  pages={1--8},
+  year={2004},
+  publisher={Elsevier Science}
+}
+
+
 @article{batty2005agents,
   title={Agents, cells, and cities: new representational models for simulating multiscale urban dynamics},
   author={Batty, Michael},
